# ninja-force

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh  todo.txt
assets/: pong_spritesheet.ron
assets/sprites/: dirt.ron  items.ron  player.ron
config/: bindings.ron  display.ron  game.ron
src/: config.rs  geometry.rs  loader.rs  main.rs  state.rs  transforms.rs
src/components/: arena.rs  ball.rs  camera.rs  enemy.rs  ground.rs  items.rs  mod.rs  paddle.rs  physics.rs  player.rs  score.rs
