[package]
name = "ninja-force"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = {version = "*", features=["derive"]}
serde_derive = "*"
objc = "=0.2.6"
rand = "0.7"

[dependencies.amethyst]
version = "0.13.2"
path = "../amethyst"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
